# words-picker

./: CMakeLists.txt  data.json
cmake/: FindFFmpeg.cmake
src/: mainwindow.cpp
src/api/: CMakeLists.txt  play_url.cpp  play_url.h  result.cpp  youdaoapi.cpp  youdaoapi.h
src/windows/: CMakeLists.txt  float_browser.cpp  float_browser.h  float_button.cpp  float_button.h
